--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,11 @@
 # Ignore Byebug command history file.
 .byebug_history
 .ruby-version
+.DS_Store
+# React on Rails
+npm-debug.log
+node_modules
+
+
+# Generated js bundles
+/app/assets/webpack/*
