--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,9 @@
     "react-on-rails": "5.2.0",
     "webpack": "^1.12.14"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-eslint": "^6.1.2",
+    "eslint": "^3.1.1",
+    "eslint-plugin-react": "^5.2.2"
+  }
 }
